# PySpark_feature_extract

./: README.md  pyproject.toml
P8_Notebook/: P8Fruits_local.ipynb
P8_Notebook/data/Results/: .part-00000-cd623598-a05c-418f-878d-325f0758d2ca-c000.snappy.parquet.crc  .part-00001-cd623598-a05c-418f-878d-325f0758d2ca-c000.snappy.parquet.crc  part-00000-cd623598-a05c-418f-878d-325f0758d2ca-c000.snappy.parquet  part-00001-cd623598-a05c-418f-878d-325f0758d2ca-c000.snappy.parquet
